result/subtask03-precedenc/testcase01.out
/home/share/hw2/input/subtask03-precedenc/testcase01.cpp:1:21: error:  syntax error
     1 |int main(string argv[ ) {
       |                    ^
Total lines: 1
